# tauri-plugin-polygon

./: Cargo.toml  LICENSE  README.md  build.rs  package.json
examples/camel_snake_converter/: README.md  index.html  package.json
examples/camel_snake_converter/src/: App.vue  main.js
examples/camel_snake_converter/src-tauri/: Cargo.toml  tauri.conf.json
examples/camel_snake_converter/src-tauri/capabilities/: default.json
examples/camel_snake_converter/src-tauri/src/: lib.rs  main.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  grab.rs  lib.rs  models.rs  polygon.rs  statics.rs  thread_pool.rs  utils.rs  view.rs
