[package]
name = "tauri-plugin-polygon"
version = "0.1.2"
authors = [ "houycth" ]
description = "A plugin for [tauri@v2](https://tauri.app/) to achieve click-through of the tauri main window by allowing developers to define polygons, thus customizing the mouse response area."
edition = "2021"
rust-version = "1.77.2"
include = ["/permissions", "/src", "build.rs", "Cargo.toml"]
links = "tauri-plugin-polygon"
license = "MIT"
homepage = "https://github.com/houycth/tauri-plugin-polygon"
repository = "https://github.com/houycth/tauri-plugin-polygon"
documentation = "https://docs.rs/tauri-plugin-polygon/"
keywords = ["click-through", "mouse-penetrate"]
readme = "README.md"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "1.0"
serde_json = "1"
log = { version = "0.4" }
portable-atomic = { version = "1", default-features = false, features = ["float"] }
rdev = { version = "0.5", features = ["unstable_grab"] }

[build-dependencies]
tauri-plugin = { version = "2", features = ["build"] }
